# nishiogi

./: .dev_plan.md  .envrc  Cargo.toml  README.md
src/: agent.rs  claude_client.rs  github_copilot_client.rs  lib.rs  main.rs  show_file.rs  tree.rs
