[package]
name = "nishiogi"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.11.1"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8.1"
